# pyNavigation

./: CMakeLists.txt  pyproject.toml  vcpkg.json
cmake/: add_stub.cmake
examples/: inverse_kinematics.py  motion_plan.py  pyproject.toml  urdf_spec.py  viewer.py
examples/assets/: empty_scene.xml
src/pyNavigation/: __init__.py  py_navigation_ext.pyi
src/py_binding/: py_detour.cpp  py_navigation_ext.cpp
tests/cpp/: CMakeLists.txt  test_variable.cpp
tests/python/: test_urdf.py
